# PyNintendoEPrice

./: .gitignore  Dockerfile.txt  README.md
document/: docker_command.md  (+9 more)
src/ns_web_api/: Pipfile  pyproject.toml
src/ns_web_api/ns_web_api/: __init__.py  cache.py  clinic_apis.py  config.py  database.py  line_liff.py  linebot_apis.py  main.py  manage.py  mask.py  models.py  music_api.py  rate.py  settings.py
src/ns_web_api/ns_web_api/baby/: hosipital_state.py
src/ns_web_api/ns_web_api/bot/: basebot.py  line.py
src/ns_web_api/ns_web_api/events/: analyzer.py  baby_naming.py  clinic.py  diving.py  games.py  lifes.py  music.py  stock.py  traffic.py
src/ns_web_api/ns_web_api/mask_sale/: timetable.py
src/ns_web_api/ns_web_api/music/: music_client_factory.py  music_sync.py  sporify_api.py  sporify_server_api.py  spotify_oauth.py  spotify_user_api.py  youtube_music_api.py
src/ns_web_api/ns_web_api/naming/: naming.py
src/ns_web_api/ns_web_api/ptx/: auth.py
src/ns_web_api/ns_web_api/templates/: base.html  currency.html  eprice.html  games.html  liff_music.html
src/ns_web_api/ns_web_api/viewmodels/: game.py
src/ns_web_api/spotify/: spotify_api.py  spotify_oauth.py  tests_spotify_api.py
src/ns_web_api/tests/: test.py  tests_music_sync.py  tests_spotify_server_spi.py  tests_spotify_spi.py  tests_spotify_user_api.py  tests_youtube_api.py
src/ns_web_api/web/: cache.py  clinic_apis.py  config.ini  config.py  linebot_apis.py  main.py  manage.py  mask.py  models.py  rate.py  settings.py  uwsgi.ini
src/ns_web_api/web/bot/: basebot.py  line.py
src/ns_web_api/web/events/: analyzer.py  clinic.py  default.py  diving.py  games.py  lifes.py  stock.py  traffic.py
src/ns_web_api/web/mask_sale/: timetable.py
src/ns_web_api/web/naming/: naming.py
src/ns_web_api/web/ptx/: intercity_bus.py  thsr.py
src/ns_web_api/web/templates/: base.html  currency.html  eprice.html  games.html
src/ns_web_crawler/: Pipfile  README.md  pyproject.toml  scrapy.cfg  setup.py
src/ns_web_crawler/ns_web_crawler/: __init__.py  clock.py  eshop_task.py  init.py  items.py  middlewares.py  pipelines.py  scrapydweb_settings_v10.py  settings.py  spider_runner.py  spider_scheduler.py
src/ns_web_crawler/ns_web_crawler/connections/: postgresql_conn.py
src/ns_web_crawler/ns_web_crawler/eshop/: eshop_costants.py  eshop_eu.py  eshop_jp.py  eshop_price.py  eshop_us.py  game_poco.py
src/ns_web_crawler/ns_web_crawler/items/: country_currency.py  eshop_price.py  eshop_price_onsale.py  ns_game_name.py
src/ns_web_crawler/ns_web_crawler/models/: country_mapping_currency_model.py  game_eprice_model.py  game_model.py
(+28 files in other folders)
